Prevent long words/content from stretching the discussion list width

--- a/framework/core/less/forum/DiscussionListItem.less
+++ b/framework/core/less/forum/DiscussionListItem.less
@@ -87,6 +87,7 @@
     font-size: 12px;
     line-height: 1.5em;
     display: block;
+    word-break: break-word;
 
     .DiscussionPage-list & {
       margin-right: 0;
